# apps/notification-service/src/notification/router/subscription.swagger.yml
@@ -62,6 +62,14 @@ components:
                 enum: [email, sms, slack]
               address:
                 type: string
+    SubscriptionCriteria:
+      type: object
+      properties:
+        correlationId:
+          type: string
+        context:
+          type: object
+          additionalProperties: true
     Subscription:
       type: object
       properties:
@@ -70,13 +78,7 @@ components:
         subscriber:
           $ref: "#/components/schemas/Subscriber"
         criteria:
-          type: object
-          properties:
-            correlationId:
-              type: string
-            context:
-              type: object
-              additionalProperties: true
+          $ref: "#/components/schemas/SubscriptionCriteria"
     SendVerifyCodeOperation:
       type: object
       properties:
@@ -202,6 +204,8 @@ components:
           schema:
             type: object
             properties:
+              criteria:
+                $ref: "#/components/schemas/SubscriptionCriteria"
               userId:
                 type: string
               addressAs:
